# fituna

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: AI_MODEL_USAGE.md  ARCHITECTURE.md  DEMO_SCRIPT.md  RESULTS.md  SBOM.md  USE_CASES.md
examples/: example_config.json
fituna/: __init__.py  __main__.py  bench.py  binaries.py  cache.py  cli.py  config.py  errors.py  hardware.py  mcp_server.py  model_info.py  quality.py  quantize.py  report.py  search.py
notebooks/: colab_nvidia_verification.ipynb
tests/: test_cache.py  test_config.py  test_hardware.py  test_search.py
tests/fixtures/: llama_bench_sample.json
