[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "fituna"
version = "0.1.0"
description = "Hardware-aware auto-tuner that finds the smallest llama.cpp GGUF quantization + runtime config meeting a target throughput and quality-loss budget."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "FiTuna contributors" }]
keywords = ["llama.cpp", "gguf", "quantization", "llm", "inference", "benchmarking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
fituna = "fituna.cli:main"

[project.urls]
Homepage = "https://github.com/fituna/fituna"

[tool.setuptools.packages.find]
include = ["fituna*"]

[tool.setuptools.package-data]
fituna = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
